--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,27 @@
+aiofiles==23.2.1
+aiogram==3.2.0
+aiohttp==3.9.1
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==4.1.0
+attrs==23.1.0
+certifi==2023.11.17
+distro==1.8.0
+frozenlist==1.4.1
+gunicorn==21.2.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.2
+idna==3.6
+magic-filter==1.0.12
+multidict==6.0.4
+openai==1.5.0
+packaging==23.2
+pydantic==2.5.2
+pydantic_core==2.14.5
+python-telegram-bot==20.7
+sniffio==1.3.0
+tqdm==4.66.1
+typing_extensions==4.9.0
+yarl==1.9.4
 
