--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiofiles==23.2.1
-aiogram==3.2.0
+aiogram==3.3.0
 aiohttp==3.9.1
 aiosignal==1.3.1
 annotated-types==0.6.0
@@ -7,6 +7,7 @@ anyio==4.1.0
 attrs==23.1.0
 certifi==2023.11.17
 distro==1.8.0
+dnspython==2.6.1
 frozenlist==1.4.1
 gunicorn==21.2.0
 h11==0.14.0
@@ -19,10 +20,9 @@ openai==1.5.0
 packaging==23.2
 pydantic==2.5.2
 pydantic_core==2.14.5
+pymongo==4.6.1
 python-telegram-bot==20.7
 sniffio==1.3.0
 tqdm==4.66.1
 typing_extensions==4.9.0
 yarl==1.9.4
-
-
