--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.1.0
 attrs==23.1.0
+boto==2.49.0
 certifi==2023.11.17
 distro==1.8.0
 dnspython==2.6.1
